changed menu names

--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
 			<a href="index.html"><img src="syntill8-logo.png" alt="Syntill8 Microcontroller IP" /></a>
 		</div>
 		<div class="nav-container hide-on-mobile">
+			<h4> First Silicon Success. Every Time.</h4>
 			<ul id="menu-bar">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
-				<li><a href="support.html">Sales &#38; Support</a></li>
+				<li><a href="support.html">Support</a></li>
 				<li><a href="consulting.html">Consulting</a></li>
-				<li><a href="company.html">About</a></li>
+				<li><a href="company.html">Company</a></li>
 				<li><a href="affiliates.html">Affiliates</a></li>
 				<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
 			</ul>
@@ -54,9 +55,9 @@
 			 	   <ul>
 	   					<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="products.html">Products</a></li>
-	   					<li><a href="support.html">Sales &#38; Support</a></li>
+	   					<li><a href="support.html">Support</a></li>
 	   					<li><a href="consulting.html">Consulting</a></li>
-	   					<li><a href="company.html">About</a></li>
+	   					<li><a href="company.html">Company</a></li>
 	   					<li><a href="affiliates.html">Affiliates</a></li>
 	   					<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
 				   </ul>
@@ -77,7 +78,6 @@
 		  </ul>
 		</div>
 		<div id="first-title">
-			<h1>We create and licence microcontroller intellectual property and provide consulting services to the semiconductor industry</h1>
 		</div>
 		<div class="grid-100 tablet-grid-100 mobile-grid-100" id="first-content">
 			<h2>8051 Microcontroller Intellectual Property</h2>
