--- a/legal.html
+++ b/legal.html
@@ -30,9 +30,9 @@
 			<ul id="menu-bar">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
-	  			<li><a href="support.html">Sales &#38; Support</a></li>
+				<li><a href="support.html">Support</a></li>
 	 			<li><a href="consulting.html">Consulting</a></li>
-				<li><a href="company.html">About</a></li>
+				<li><a href="company.html">Company</a></li>
 				<li><a href="affiliates.html">Affiliates</a></li>
 	   			<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
 			</ul>
@@ -43,9 +43,9 @@
 			 	   <ul>
 	   					<li><a href="index.html">Home</a></li>
 						<li><a href="products.html">Products</a></li>
-	   					<li><a href="support.html">Sales &#38; Support</a></li>
+						<li><a href="support.html">Support</a></li>
 	   					<li><a href="consulting.html">Consulting</a></li>
-	   					<li><a href="company.html">About</a></li>
+	   					<li><a href="company.html">Company</a></li>
 						<li><a href="affiliates.html">Affiliates</a></li>
 	   					<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
 				   </ul>
@@ -54,22 +54,21 @@
 		</div>
 		<div class="banner" id="M8051-banner">
 			<div class="banner-inner-grid"></div>
-			<h1>M8051</h1>
+			<h1>Legal Statement</h1>
 			
 		</div>
 		<div id="content">				
-			<div  id="second-column">
-				<h2>Legal Statement</h2>
+			<div id="second-column">
 				<p>Syntill8 Limited is a company registered in England with registration number 3399269. The registered address of Syntill8 Limited is 36 Trafalgar Road, Twickenham, Middlesex, United Kingdom.</p>
-				<h3>SYNTILL8 IS THE REGISTERED TRADEMARK OF SYNTILL8 LIMITED</h3>
+				<h2 class="top-border">SYNTILL8 IS THE REGISTERED TRADEMARK OF SYNTILL8 LIMITED</h2>
 <p>Intel and MCS51 are trademarks of Intel Corporation. Mentor Graphics is the trademark of Mentor Graphics Corporation. IAR is a registered trademark of IAR Systems. Keil and Uvision are registered trademarks of Keil Software. FS2 is a trademark of MIPS. All other trademarks and proprietary names are the property of their respective owners.</p>
-				<h3>COPYRIGHT NOTICE</h3>
+				<h2 class="top-border">COPYRIGHT NOTICE</h2>
 <p>© Copyright Syntill8 Ltd 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012 and 2013. All rights reserved. Copyright in this website and the documents it contains belongs to Syntill8 Ltd. and or its licensors. </p>
-				<h3>COOKIE USAGE</h3>
+				<h2 class="top-border">COOKIE USAGE</h2>
 <p>This website may use cookies to record information on your use of this website. The information will be stored as a small text file on your computer. Syntill8 may make use of the information recorded in such cookies for analysing usage of this website. If you do not wish any information to be used in this manner, you should disable cookies on your computer.</p>
-				<h3>EXTERNAL LINKS</h3>
+				<h2 class="top-border">EXTERNAL LINKS</h2>
 <p>This web site includes hypertext links or references to other web sites belonging to others and over which Syntill8 Ltd has no control. Syntill8 is not responsible for the content of such web sites. The web sites referred to are not necessarily endorsed by Syntill8.</p>
-				<h3>CONDITIONS AND WARRENTIES</h3>
+				<h2 class="top-border">CONDITIONS AND WARRENTIES</h2>
 <p>All products licensed by Syntill8 Ltd are supplied as is and under the terms of a licence agreement the terms of which supersede any terms included here. Syntill8 and its licensors make no warranties, express, implied or statutory, with respect to products referred to in the website. For the avoidance of doubt, (a) Syntill8 does not warrant that the functions contained in the products will meet your requirements or that the products will be error-free; and (b) Syntill8 and its licensors specifically disclaim all implied warranties of merchantability, fitness for a particular purpose and non-infringement of the intellectual property rights of other parties. </p>
 
 			</div>
