--- a/M2WISM4WIS-bulletin.html
+++ b/M2WISM4WIS-bulletin.html
@@ -43,7 +43,7 @@
 			 	   <ul>
 	   					<li><a href="index.html">Home</a></li>
 						<li><a href="products.html">Products</a></li>
-	   					<li><a href="support.html">Sales &#38; Support</a></li>
+				<li><a href="support.html">Support</a></li>
 	   					<li><a href="consulting.html">Consulting</a></li>
 	   					<li class="active"><a href="company.html">About</a></li>
 	   					<li><a href="">Affiliates</a></li>
