--- a/company.html
+++ b/company.html
@@ -30,9 +30,9 @@
 			<ul id="menu-bar">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
-				<li><a href="support.html">Sales &#38; Support</a></li>
+				<li><a href="support.html">Support</a></li>
 				<li><a href="consulting.html">Consulting</a></li>
-				<li class="active"><a href="company.html">About</a></li>
+				<li class="active"><a href="company.html">Company</a></li>
 				<li><a href="affiliates.html">Affiliates</a></li>
 				<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
 			</ul>
@@ -43,9 +43,9 @@
 			 	   <ul>
 	   					<li><a href="index.html">Home</a></li>
 						<li><a href="products.html">Products</a></li>
-	   					<li><a href="support.html">Sales &#38; Support</a></li>
+						<li><a href="support.html">Support</a></li>
 	   					<li><a href="consulting.html">Consulting</a></li>
-	   					<li class="active"><a href="company.html">About</a></li>
+	   					<li class="active"><a href="company.html">Company</a></li>
 						<li><a href="affiliates.html">Affiliates</a></li>
 						<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
 				   </ul>
@@ -54,18 +54,17 @@
 		</div>
 		<div class="banner" id="about-banner">
 			<div class="banner-inner-grid"></div>
-			<h1>About Us</h1>
+			<h1>Company</h1>
 			
 		</div>
 		<div id="content">				
 			<div  id="second-column">
-				<h2>Company Overview</h2>
-				<h3>SYNTILL8 IS AN IP DESIGN COMPANY BASED IN THE UK AND FOUNDED IN 1997 TO PROVIDE NOVEL 8051 DESIGNS IN SOFT CORE FORMAT.</h3>
+				<h2 >SYNTILL8 IS AN IP DESIGN COMPANY BASED IN THE UK AND FOUNDED IN 1997 TO PROVIDE NOVEL 8051 DESIGNS IN SOFT CORE FORMAT.</h2>
 				<p>Syntill8 licensed its first major IP design the F8051 (now called the M8051W) to Mentor Graphics Corporation in 1998. The Syntill8 worked for 3Soft Ltd. on the design and verification of the first 8051 IP soft cores, namely the M8051 and M8052. And, under a consultancy agreement with Mentor Graphics, Syntill8 provided pre-sales and post-sales technical support services to Mentor Graphics’ 8051 IP customer prospects and licensees.</p>
 
 <p>In addition to IP soft core licensing, Syntill8 provides design services to many of the world's leading semiconductor companies for designs that incorporate microcontroller, USB, Ethernet and PCI Express technology.</p>
 
-<h2>Press Releases</h2>
+<h2 class="top-border">Press Releases</h2>
 
 <h5><a href="UDPMAC-bulletin.html">August 6, 2013</a></h5>
 <p>Syntill8 ltd. today announced new product development of a 1-Gigabit UDP/Ethernet MAC (UDPMAC) core. The UDPMAC provides an Ethernet MAC interface and UDP datagram interface to the M8051W and M8051EW using integral DMA and configurable packet FIFOs. Use of standard synchronous design methodology makes this core simple to integrate into both ASIC SoC and FPGA implementations. <a href="UDPMAC-bulletin.html">more...</a></p>
@@ -74,16 +73,16 @@
 <p>Syntill8 ltd is proud to celebrate 15 years in the 8051 IP licensing and design consultancy business. Since 1998 our 8051 soft core IP designs have enjoyed significant success, having been licensed over 75 times, to both multinational and startup companies, for use in hundreds of IC designs. <a href="15-years-bulletin.html">more...</a></p>
 
 <h5><a href="M2WISM4WIS-bulletin.html">June 5, 2012</a></h5>
-<p>Syntill8 ltd. proudly announces the availability of two new companion Interface IP cores; a two-wire slave interface (M2WIS), and a four-wire slave Interface (M4WIS) designed specifically for use with Syntill8’s silicon proven and widely used 8051 Microcontroller IP soft cores, the M8051W and M8051EW.<a href="M2WISM4WIS-bulletin.html">more...</a></p>
+<p>Syntill8 ltd. proudly announces the availability of two new companion Interface IP cores; a two-wire slave interface (M2WIS), and a four-wire slave Interface (M4WIS) designed specifically for use with Syntill8’s silicon proven and widely used 8051 Microcontroller IP soft cores, the M8051W and M8051EW. <a href="M2WISM4WIS-bulletin.html">more...</a></p>
 
 <h5><a href="M8051EW-bulletin.html">May 25, 2011</a></h5>
-<p>Following the release, last month, of the M8051W V5.0 Syntill8 Ltd. has now released version 3.0 of the M8051EW 8-bit microcontroller IP, which includes the same set of significant performance enhancements, tool flow updates and productivity enhancements for the enhanced product.<a href="M8051EW-bulletin.html">more...</a></p>
+<p>Following the release, last month, of the M8051W V5.0 Syntill8 Ltd. has now released version 3.0 of the M8051EW 8-bit microcontroller IP, which includes the same set of significant performance enhancements, tool flow updates and productivity enhancements for the enhanced product. <a href="M8051EW-bulletin.html">more...</a></p>
 
 <h5><a href="M8051W-bulletin.html">April 19, 2011</a></h5>
-<p>Syntill8 Ltd. has released version 5.0 of the M8051W 8-bit microcontroller IP, which includes performance enhancements, tool flow updates and productivity enhancements.<a href="M8051W-bulletin.html">more...</a></p>
+<p>Syntill8 Ltd. has released version 5.0 of the M8051W 8-bit microcontroller IP, which includes performance enhancements, tool flow updates and productivity enhancements. <a href="M8051W-bulletin.html">more...</a></p>
 
 <h5><a href="mentor-reseller-PR.html">15 July 2009</a></h5>
-<p>Syntill8 Ltd., technical experts in 8-bit microcontroller IP, today announced a reseller agreement with Mentor Graphics Corporation (Nasdaq: MENT). Under the agreement Syntill8 will sell and support Mentor’s industry proven 8-bit microcontroller Intellectual Property (IP) cores.<a href="mentor-reseller-PR.html">more...</a>
+<p>Syntill8 Ltd., technical experts in 8-bit microcontroller IP, today announced a reseller agreement with Mentor Graphics Corporation (Nasdaq: MENT). Under the agreement Syntill8 will sell and support Mentor’s industry proven 8-bit microcontroller Intellectual Property (IP) cores. <a href="mentor-reseller-PR.html">more...</a>
 </p>
 
 			</div>
