--- a/contact-us-form.html
+++ b/contact-us-form.html
@@ -31,9 +31,9 @@
 			<ul id="menu-bar">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
-				<li><a href="support.html">Sales &#38; Support</a></li>
+				<li><a href="support.html">Support</a></li>
 				<li><a href="consulting.html">Consulting</a></li>
-				<li><a href="company.html">About</a></li>
+				<li><a href="company.html">Company</a></li>
 				<li><a href="affiliates.html">Affiliates</a></li>
 				<li class="float-right active" id="contact-us-link"><a href="contatct-us.html">Contact Us</a></li>
 			</ul>
@@ -44,9 +44,9 @@
 			 	   <ul>
 	   					<li><a href="index.html">Home</a></li>
 						<li><a href="products.html">Products</a></li>
-	   					<li><a href="support.html">Sales &#38; Support</a></li>
+						<li><a href="support.html">Support</a></li>
 	   					<li><a href="consulting.html">Consulting</a></li>
-	   					<li><a href="company.html">About</a></li>
+	   					<li><a href="company.html">Company</a></li>
 						<li><a href="affiliates.html">Affiliates</a></li>
 						<li class="float-right active" id="contact-us-link"><a href="contatct-us.html">Contact Us</a></li>
 				   </ul>
