--- a/products.html
+++ b/products.html
@@ -31,9 +31,9 @@
 			<ul id="menu-bar">
 				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="products.html">Products</a></li>
-				<li><a href="support.html">Sales &#38; Support</a></li>
+				<li><a href="support.html">Support</a></li>
 				<li><a href="consulting.html">Consulting</a></li>
-				<li><a href="company.html">About</a></li>
+				<li><a href="company.html">Company</a></li>
 				<li><a href="affiliates.html">Affiliates</a></li>
 				<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
 			</ul>
@@ -44,9 +44,9 @@
 			 	   <ul>
 	   					<li><a href="index.html">Home</a></li>
 						<li class="active"><a href="products.html">Products</a></li>
-	   					<li><a href="support.html">Sales &#38; Support</a></li>
+	   					<li><a href="support.html">Support</a></li>
 	   					<li><a href="consulting.html">Consulting</a></li>
-	   					<li><a href="company.html">About</a></li>
+	   					<li><a href="company.html">Company</a></li>
 						<li><a href="affiliates.html">Affiliates</a></li>
 	   					<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
 				   </ul>
@@ -59,11 +59,10 @@
 		</div>
 		<div id="content">
 			<div class="grid-25 tablet-grid-25 mobile-grid-100" id="first-column">
-				<h4>Choose from our standard products</h4>
 				<h5>MICROCONTROLLER IP</h5>
 				<ul class="nav nav-lines">
 					<li><a href="M8051-2.html">M8051</a></li>
-					<li><a href="15-years-bulletin.html">15 Year Bulletin</a></li>
+					<li><a href="M8051-2.html">M8052</a></li>
 					<li><a href="M8051W-EW.html">M8051EW</a></li>
 					<li><a href="M8051W-EW.html">M8051W</a></li>
 				</ul>
@@ -71,16 +70,14 @@
 				<ul class="nav nav-lines">
 					<li><a href="M4WIS.html">M4WIS</a></li>
 					<li><a href="M2WIS.html">M2WIS</a></li>
-				</ul>
-				<h5><a href="#standard-deliverables">STANDARD DELIVERABLES</a></h5>
-				
+				</ul>				
 	
 			</div>
 			<div class="grid-75 tablet-grid-75 mobile-grid-100" id="second-column">
 				<h2>MICROCONTROLLER IP</h2>
 				<p>The Syntill8 product portfolio includes a family of microcontroller soft IP cores, originally designed for Mentor Graphics Corporation, comprising the <a href="M8051-2.html">M8051, M8052</a>, <a href="M8051W-EW">M8051W and M8051EW</a>. These quality designs are all silicon proven with countless tape outs over many years. They have a long established reputation with the blue chip semiconductor manufacturers for quality and ease of use.</p>
 				<h2 class="top-border">PERIPHERAL IP</h2>
-				<p>Additional peripheral interface IP cores are available for use with the 8051 microcontroller IP. We offer Four-Wire Slave Interface (<a href="peripheral.html">M4WIS</a>), Two-Wire Slave Interface (<a href="peripheral.html">M2WIS</a>) core, and a 1-Gigabit UDP/Ethernet MAC (UDPMAC) core. These functions are in addition to the peripherals built into the microcontroller IP cores.
+				<p>Additional peripheral interface IP cores are available for use with the 8051 microcontroller IP. We offer a Four-Wire Slave Interface (<a href="peripheral.html">M4WIS</a>), Two-Wire Slave Interface (<a href="peripheral.html">M2WIS</a>) core, and a 1-Gigabit UDP/Ethernet MAC (UDPMAC) core. These functions are in addition to the peripherals built into the microcontroller IP cores.
 </p>
 				<h2 class="top-border">STANDARD DELIVERABLES</h2>
 				<ul>
