--- a/support.html
+++ b/support.html
@@ -30,9 +30,9 @@
 			<ul id="menu-bar">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
-				<li class="active"><a href="support.html">Sales &#38; Support</a></li>
+				<li class="active"><a href="support.html">Support</a></li>
 				<li><a href="consulting.html">Consulting</a></li>
-				<li><a href="company.html">About</a></li>
+				<li><a href="company.html">Company</a></li>
 				<li><a href="affiliates.html">Affiliates</a></li>
 				<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
 			</ul>
@@ -43,9 +43,9 @@
 			 	   <ul>
 	   					<li><a href="index.html">Home</a></li>
 						<li class="active"><a href="products.html">Products</a></li>
-	   					<li><a href="support.html">Sales &#38; Support</a></li>
+	   					<li><a href="support.html">Support</a></li>
 	   					<li><a href="consulting.html">Consulting</a></li>
-	   					<li><a href="company.html">About</a></li>
+	   					<li><a href="company.html">Company</a></li>
 	   					<li><a href="affiliates.html">Affiliates</a></li>
 	   					<li class="float-right" id="contact-us-link"><a href="">Contact Us</a></li>
 				   </ul>
