working drop-down menu
still working on responsiveness

--- a/consulting.html
+++ b/consulting.html
@@ -26,6 +26,7 @@
 			<a href="index.html"><img src="syntill8-logo.png" alt="Syntill8 Microcontroller IP" /></a>
 		</div>
 		<div class="nav-container hide-on-mobile">
+			<h4> First Silicon Success. Every Time.</h4>
 			<ul id="menu-bar">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
@@ -37,10 +38,11 @@
 			</ul>
 		</div>
 		<div class="mav-container hide-on-tablet hide-on-desktop">
+			<h4> First Silicon Success. Every Time.</h4>
 			<ul id="menu-bar">
-				<li><a href="#">Menu</a>
+				<li><a href="index.html">Menu</a>
 			 	   <ul>
-	   					<li class="active"><a href="index.html">Home</a></li>
+	   					<li><a href="index.html">Home</a></li>
 						<li><a href="products.html">Products</a></li>
 						<li><a href="support.html">Support</a></li>
 	   					<li class="active"><a href="consulting.html">Consulting</a></li>
