--- a/contact-us-form.html
+++ b/contact-us-form.html
@@ -28,6 +28,7 @@
 			<a href="index.html"><img src="syntill8-logo.png" alt="Syntill8 Microcontroller IP" /></a>
 		</div>
 		<div class="nav-container hide-on-mobile">
+			<h4> First Silicon Success. Every Time.</h4>
 			<ul id="menu-bar">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
@@ -39,8 +40,9 @@
 			</ul>
 		</div>
 		<div class="mav-container hide-on-tablet hide-on-desktop">
+			<h4> First Silicon Success. Every Time.</h4>
 			<ul id="menu-bar">
-				<li><a href="#">Menu</a>
+				<li><a href="index.html">Menu</a>
 			 	   <ul>
 	   					<li><a href="index.html">Home</a></li>
 						<li><a href="products.html">Products</a></li>
