fixed the home page!

--- a/index.html
+++ b/index.html
@@ -39,41 +39,38 @@
 
 <body>
 	<div id="wrap" class="grid-container">
-		<div id="header">
-			
-		
-			<div class="nav-container hide-on-mobile">
-				<h4> First Silicon Success. Every Time.</h4>
-				<ul id="menu-bar">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="products.html">Products</a></li>
-					<li><a href="support.html">Support</a></li>
-					<li><a href="consulting.html">Consulting</a></li>
-					<li><a href="company.html">Company</a></li>
-					<li><a href="affiliates.html">Affiliates</a></li>
-					<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
-				</ul>
-			</div>
-  		   <a href="index.html"><img src="syntill8-logo.png" alt="Syntill8 Microcontroller IP" /></a>
-			
-			<div class="nav-container hide-on-tablet hide-on-desktop grid-100">
-				<h4> First Silicon Success. Every Time.</h4>
-				<ul id="menu-bar">
-					<li><a href="index.html">Menu</a>
-				 	   <ul>
-		   					<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="products.html">Products</a></li>
-		   					<li><a href="support.html">Support</a></li>
-		   					<li><a href="consulting.html">Consulting</a></li>
-		   					<li><a href="company.html">Company</a></li>
-		   					<li><a href="affiliates.html">Affiliates</a></li>
-		   					<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
-					   </ul>
-				   </li>
-			   </ul>
-			</div>
-			
+		<div id="logo-space">
+			<a href="index.html"><img src="syntill8-logo.png" alt="Syntill8 Microcontroller IP" /></a>
 		</div>
+		<div class="nav-container hide-on-mobile">
+			<h4> First Silicon Success. Every Time.</h4>
+			<ul id="menu-bar">
+				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="products.html">Products</a></li>
+				<li><a href="support.html">Support</a></li>
+				<li><a href="consulting.html">Consulting</a></li>
+				<li><a href="company.html">Company</a></li>
+				<li><a href="affiliates.html">Affiliates</a></li>
+				<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
+			</ul>
+		</div>			
+		<div class="nav-container hide-on-tablet hide-on-desktop grid-100">
+			<h4> First Silicon Success. Every Time.</h4>
+			<ul id="menu-bar">
+				<li><a href="index.html">Menu</a>
+			 	   <ul>
+	   					<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="products.html">Products</a></li>
+	   					<li><a href="support.html">Support</a></li>
+	   					<li><a href="consulting.html">Consulting</a></li>
+	   					<li><a href="company.html">Company</a></li>
+	   					<li><a href="affiliates.html">Affiliates</a></li>
+	   					<li class="float-right" id="contact-us-link"><a href="contact-us.html">Contact Us</a></li>
+				   </ul>
+			   </li>
+		   </ul>
+		</div>
+
 	<div class="grid-100 tablet-grid-100 mobile-grid-100">
 		<div class="flexslider">
 		  <ul class="slides">
