--- a/affiliates.html
+++ b/affiliates.html
@@ -68,7 +68,7 @@
 				</div>
 					
 				<div class="grid-100 tablet-grid-100 mobile-grid-100 media-content">
-					<a href="www.keil.com/c51"><img class="float-left media-img" src="img/keil-logo.jpg" width="177" height="67" alt="Keil Logo"></a>
+					<a href="www.keil.com/c51"><img class="float-left media-img" src="img/keil-logo.png" width="179" height="69" alt="Keil Logo"></a>
 					<p>The <a href="www.keil.com/c51">Keil C51 C-compiler</a>, and uVision integrated development IDE, support all our products. In particular the 16-bit pointer extensions to the M8051W and M8051EW are used during compiler optimization to produce more efficient code and run times.</p>
 				</div>
 				
