--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 		<div class="flexslider">
 		  <ul class="slides">
 		    <li>
-		      <a href="support.html"><img src="img/banner-03.jpg" alt="Memory Resources selection, Interfacing peripherals, clocking strategies, meeting time requirements, sales and suppport" /></a>
+		      <a href="support.html"><img src="img/banner-01.jpg" alt="First Silicon Succes Every Time - Welcome to Syntill8"alt="Memory Resources selection, Interfacing peripherals, clocking strategies, meeting time requirements, sales and suppport" /></a>
 		    </li>
 		    <li>
 		      <a href="products.html"><img src="img/banner-02.jpg" alt="Learn More about our IP products Microcontroller IP, Peripheral IP, Standard Deliverables" /></a>
 		    </li>
 		    <li>
-		      <a href="company.html"><img src="img/banner-01.jpg" alt="First Silicon Succes Every Time - Welcome to Syntill8" /></a>
+		      <a href="company.html"><img src="img/banner-03.jpg" alt="Memory Resources selection, Interfacing peripherals, clocking strategies, meeting time requirements, sales and suppport" /></a>
 		    </li>
 		  </ul>
 		</div>
